--- a/package.json
+++ b/package.json
@@ -21,5 +21,11 @@
     "pg": "^8.11.3",
     "sequelize": "^6.37.1",
     "uuidv4": "^6.2.13"
+  },
+  "devDependencies": {
+    "chai": "^5.1.0",
+    "jest": "^29.7.0",
+    "mocha": "^10.3.0",
+    "supertest": "^6.3.4"
   }
 }
